# ENGG1340-Group-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  savegame.txt
include/: game_logic.h
include/battleship/: action.h  board.h  color.h  constants.h  game.h  point.h  ship.h  utilities.h
include/client/: client_game.h  ctcpclient.h
include/common/: color.h  constants.h  game.h  game_logic.h  serialization.h  utilities.h
include/server/: server_game.h
lib/ncurses/share/terminfo/a/: a210  abm85  abm85e  abm85h  adm36  alt2  altos-5
lib/ncurses/share/terminfo/b/: basic4
lib/ncurses/share/terminfo/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt-vt220
lib/ncurses/share/terminfo/d/: ddr3180  dec-vt220
lib/ncurses/share/terminfo/e/: emu-220
lib/ncurses/share/terminfo/g/: go140  go140w  go225
lib/ncurses/share/terminfo/h/: h29a-kc-uc  he80  hp2392  hp2645a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
lib/ncurses/share/terminfo/i/: ims-ansi
lib/ncurses/share/terminfo/k/: kt7
lib/ncurses/share/terminfo/m/: mt4520-rv
server/: server_game.cpp
src/: Game.cpp  main.cpp  tempCodeRunnerFile.cpp  template.cpp  utilities.cpp
src/battleship/: battleship.cpp  board.cpp  client.cpp  color.cpp  colorboard.cpp  constants.cpp  game.cpp  game_logic.cpp  gamewithkey.cpp  keyboard.cpp  ship.cpp  utilities.cpp
src/client/: client.cpp  client_game.cpp  ctcpclient.cpp
src/common/: game_action.cpp  game_logic.cpp  utilities.cpp
src/server/: cepollserver.cpp  server.cpp  server_game.cpp
test/: test_ncurses.cpp  test_serialization.cpp
(+118 files in other folders)
